tests/rename/should_fail/T7338.hs
module T7338 where

a, a :: Int
a :: Int
a = 0
